added label, completed  post

--- a/post.Rmd
+++ b/post.Rmd
@@ -1,14 +1,22 @@
-# A nutritional search engine with shiny and dplyr
+---
+title: A nutritional search engine with shiny and dplyr
+output: html_fragment
+---
 
+TL; DR: try our shiny new [nutritional search engine](https://piccolbo.shinyapps.io/foodbase/). [Feedback](mailto:foodbase@piccolboni.info) welcome.
+
+<!-- more -->
 
 “In the middle of our life's journey, I found myself in a dark wood.” So starts Dante's Inferno. My midlife doesn't feel remotely as bleak, but for reasons that will be best left untold, I had to almost completely strike two nutrients from my diet: sodium and sugar. This started a thorough examination of the body of knowledge contained in nutritional labels  that, in the US and many other countries, are mandatory on most packaged foods.
 
 <a title="By Jaidan899 (Own work) [CC BY-SA 4.0 (http://creativecommons.org/licenses/by-sa/4.0)], via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File%3ANutritionLabel.png"><img width="256" alt="NutritionLabel" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c7/NutritionLabel.png/256px-NutritionLabel.png"/></a>
 
-Despite the wisdom thus accrued, shopping frustration was inevitable. For instance, available cold breakfasts can be roughly classifieds as *granolas*, which are too high in sugar, and *cereals*, which are too high in sodium. After a long search that also involved loving family members, we found that the intersection of low sugar and low sodium contained all of two types of cereal available in our favorite grocery stores. It seems natural to think that a better solution to this problem must be e-commerce, with its enormus selection and powerful search features. While the selection is indeed enormous -- roughly [1M items](https://www.amazon.com/b/ref=sd_per_3_16310101?_encoding=UTF8&node=16310101) on Amazon alone -- nutritional content search is still at most a figment of Jeff Bezos imagination. Free text searches for [low sodium low sugar cereal], despite recent advances in NLP, resulted only in contempt for my own profession. If one replaces searching with browsing, no matter how time consuming, nutritional information is sometimes available, in the form of pictures of the packaging, but not on every site and not very consistently. There has to be a better way. So I decided to write something myself.
+Despite the wisdom thus accrued, shopping frustration was inevitable. For instance, available cold breakfasts can be roughly classifieds as *granolas*, which are too high in sugar, and *cereals*, which are too high in sodium. After a long search that also involved loving family members, we found that the intersection of no sugar and no sodium cereals contained all of two products available in our favorite grocery stores. It seems natural to think that a better solution to this problem must be e-commerce, with its enormous selection and powerful search features. While the selection is indeed enormous -- roughly [1M items](https://www.amazon.com/b/ref=sd_per_3_16310101?_encoding=UTF8&node=16310101) on Amazon alone -- nutritional content search is still at most a figment of Jeff Bezos imagination. Free text searches for [low sodium low sugar cereal], despite recent advances in NLP, resulted only in contempt for my own profession. If one replaces searching with browsing, no matter how time consuming, nutritional information is sometimes available, in the form of pictures of the packaging, but not on every site and not very consistently. There has to be a better way. So I decided to write something myself.
 
 
-The starting point is a USDA-provided [dataset](http://www.ars.usda.gov/Services/docs.htm?docid=25700) of nutritional information. It's far from complete, as it contains only 8000 entries, but it's a start. It's also fairly wide, including information for exotic nutrients such as *lycopene* and *beta_cryptoxanthin*, if those mean anything to you. What kind of searches would we like to perform on this dataset? Setting aside my weird doubly restricted diet for now, let's focus on just sodium. The average intake for the American population is [higher](http://www.mayoclinic.org/healthy-lifestyle/nutrition-and-healthy-eating/in-depth/sodium/art-20045479) than the recommended maximum intake. An even lower intake is recommended for people with high blood pressure, heart failure or Ménière's syndrome. The [Salt Skip Program](http://www.saltmatters.org/) advocates an even more radical reduction. So this is a widely useful restriction. The problem is that sodium is everywhere. As sodium chloride, or table salt, it is present in all animal source foods I can think of and even some vegetables -- I am looking at you, celery. Besides that, it became an important food preservative early in human history, allowing the storage of large amounts of food. Since our taste buds get used to its taste, it's added to a large number of foods where it's not a strictly necessary ingredient. The Salt Skip program recommends a simple approach: eat every food with less than 120mg/100g of sodium. It's a simple criterion, which also has the advantage of selecting equally bland foods, but unfortunately it tends to steer people towards more watery food for no nutritional advantage. Our goal is  achieving our main nutritional goals while also restricting sodium intake. Arguably the most important goal of nutrition is to provide enough energy to maintain a healthy body weight, hence I think ranking foods by sodium per unit of energy provided is a good idea (also suggested in the book Salt Matters). If you daily intake is 2000 cal and you eat only or on average foods with less than .5mg of sodium per 1cal, your daily intake should be less than 1g. Once we have the right amount of energy, an important nutritional goal is to get enough protein. This is particularly challenging when restricting sodium intake because animal source foods are an important source of protein and are also naturally salty -- and made saltier through processing, as in *prosciutto*. So these are the main three filters that I implemented in a shiny [application](https://piccolbo.shinyapps.io/foodbase/), together with a simple pattern match on the name of the food. But what if you have different requirements? What about my weird double diet? Rather than implementing filters for all possible diets, I decided to implement an advanced search that allows one to do whatever searches he needs. Based on 4 of the `dplyr` main "verbs", the advanced screen allows to add columns (`mutate`), sort (`arrange`), filter by any logical condition, and select the columns of interest. For instance, my search for the perfect cereal could be performed by entering `sos = pmax(sodium, sugar)` in the `mutate` field, where `sos` is short for "sodium or sugar"; then `grepl(x = food_desc, "CEREAL")` in the `filter` field, to focus on cereals; `sos` in the `arrange` field; and finally `food_desc, sodium, sugar, protein, energy, fiber` in the `select` field. This way we could discover that the only cereal in this USDA dataset containing neither sodium nor sugar, zero, zap, nada of either is Malt-O-Meal Original Ceral, which is somewhat hard to believe as it contains malted barely which itself contains sugar. The two no-sodium no-sugar cereals that I eat are nowhere to be found. Clearly we could use a more extensive and higher quality dataset. It would also be nice to gather more information about the availability of each food. As far as the UI, it would make sense to add other screens specialized for specific diets, as not everybody is familiar enough with `dplyr` to use the advanced screen, as long as the necessary information is in the data: for instance, the concentrations of gluten or oxalate are not. Please let me know what your needs are and I will try to implement your favorite search.
+The starting point is a USDA-provided [dataset](http://www.ars.usda.gov/Services/docs.htm?docid=25700) of nutritional information. It's far from complete, as it contains only 8000 entries, but it's a start. Please let me know if you know of additional data sets that could be relevant to this project. The USDA provides its own [search engine](https://ndb.nal.usda.gov/ndb/nutrients/index) but it is not flexible enough for my needs. This data set is  also fairly wide, including information for exotic nutrients such as *lycopene* and *beta_cryptoxanthin*, if those mean anything to you. What kind of searches would we like to perform on this dataset? Setting aside my doubly restricted diet for now, let's focus on just sodium. The average intake for the American population is [higher](http://www.mayoclinic.org/healthy-lifestyle/nutrition-and-healthy-eating/in-depth/sodium/art-20045479) than the recommended maximum intake. An even lower intake is recommended for people with high blood pressure, heart failure or Ménière's syndrome. The [Salt Skip Program](http://www.saltmatters.org/)  advocates an even more radical reduction. So this is a widely useful restriction. The problem is that sodium is in many foods. As sodium chloride, or table salt, it is present in all animal source foods I can think of and even some vegetables -- I am looking at you, celery. Besides that, it became an important food preservative early in history, allowing the long term storage of food. Since our taste buds get used to its taste, it's added to a large number of foods where it's not a strictly necessary ingredient. The Salt Skip program recommends a simple approach: eat only food with less than 120mg/100g of sodium. It's a simple criterion, which also has the advantage of selecting equally bland foods, which helps reset our taste buds, but unfortunately it tends to steer people towards more watery food for no nutritional advantage. If I need to eat more bland food, I may end up with the same total sodium intake. Our goal is  achieving our main nutritional goals while also restricting sodium intake. Arguably the most important goal of nutrition is to provide enough energy to maintain a healthy body weight, hence I think ranking foods by sodium per unit of energy provided is a good idea (also suggested in the book [Salt Matters](http://www.saltmatters.org/)). If your daily intake is 2000 cal and you eat only or on average foods with less than 1mg of sodium per 2cal, your daily intake should be less than 1g. Once we have the right amount of energy, an important nutritional goal is to get enough protein. This is particularly challenging when restricting sodium intake because animal source foods are an important source of protein and are also naturally salty -- and made saltier through processing, as in *prosciutto*. So these are the main three filters that I implemented in a shiny [application](https://piccolbo.shinyapps.io/foodbase/), together with a simple pattern match on the name of the food, for when you absolutely need that low sodium snivel of cheese. But what if you have different requirements? What about my weird double restriction? Rather than implementing filters for all possible diets, I decided to implement an advanced search that allows one to do whatever searches he needs, in exchange for a bit or R alphabetization. Based on 4 of the `dplyr` main "verbs", the advanced screen allows to add columns (`mutate`), sort (`arrange`), filter by any logical condition, and select the columns of interest. For instance, my search for the perfect cereal could be performed by entering `sos = pmax(sodium, sugar)` in the `mutate` field, where `sos` is short for "sodium or sugar"; then `grepl(x = food_desc, "CEREAL")` in the `filter` field, to focus on cereals; `sos` in the `arrange` field; and finally `food_desc, sodium, sugar, protein, energy, fiber` in the `select` field. This way we could discover that the only cereal in this USDA dataset containing neither sodium nor sugar, zero, zap, nada of either is Malt-O-Meal Original Cereal, which is somewhat hard to believe as it contains malted barely which itself contains sugar, but the producer [supports](http://www.maltomeal.com/product/original/) this claim. The two no-sodium no-sugar cereals that I eat are nowhere to be found. Clearly we could use a more extensive dataset. It would also be nice to gather more information about the availability of each food. As far as the UI, it would make sense to add other screens specialized for specific diets, as not everybody is familiar enough with `dplyr` to use the advanced screen, as long as the necessary information is in the data: for instance, the concentrations of gluten or oxalate are not. Please let me know what your needs are and I will try to implement your favorite search.
+
+## Implementation
 
 Now a little on the making of this shiny app. It is pretty run-of-the mill, with the only twist of some dynamic UI elements.
 The app is organized into three files, `ui.R`, `server.R` and `global.R`. The latter can be used to create objects shared by the other two, and since we have some data-dependent UI elements, that's where we read in the dataset.
@@ -72,7 +80,7 @@ The first input element is a selection between the two types of search:
 ```{r  sidebar}
 ```
 
-Then we have two conditional panels, which appear only if a condition, written in Javascript, is satisfied. The alternative to writing Javascript was to build UI elements on the server side, where the output of the previous selection is available in R. I feel this is a choice between a rock and a hard place. It may be that my knowledge of shiny is not advanced enough or a design flaw. Multiple available examples point to the latter, but I don't know how hard it would be to fix it. The first of the two panels is for the sodium-focused search and contain three sliders which provide values than used in filtering the main dataset:
+Then we have two conditional panels, which appear only if a condition, written in JavaScript, is satisfied. The alternative to writing JavaScript was to build UI elements on the server side, where the output of the previous selection is available in R. I feel this is a choice between a rock and a hard place. It may be that my knowledge of shiny is not advanced enough or a design flaw. Multiple available examples point to the latter, but I don't know how hard it would be to fix it. The first of the two panels is for the sodium-focused search and contains three sliders which provide values later used in filtering the main dataset:
 
 ```{r conditionalPanel_sodium}
 ```
@@ -81,3 +89,10 @@ The second panel has a text input for each verb, which will be converted into th
 
 ```{r conditionalPanel_advanced}
 ```
+
+Finally, the main panel displays the filtered table, accoding to any criteria the user has entered
+
+```{r mainPanel}
+```
+
+And that's all folks! Let me know if this helps with your food needs and how it can be improved. Email or [pull requests](https://github.com/piccolbo/foodbaseshiny).
